[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/village_controls.gd" type="Script" id=1]
[ext_resource path="res://Sprites/village.png" type="Texture" id=2]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.0539246, 0.726563, 0.269379, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 0.460938, 0.460938, 0.460938, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 14.0

[node name="Village" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]

[node name="YSort" type="YSort" parent="." index="0"]

sort_enabled = true

[node name="BuildingSprite" type="Sprite" parent="YSort" index="0"]

texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Offset", "Visibility" ]

[node name="Lifebar" type="ProgressBar" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -12.0
margin_top = -18.0
margin_right = 12.0
margin_bottom = -14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
min_value = 0.0
max_value = 10.0
step = 1.0
page = 0.0
value = 10.0
exp_edit = false
rounded = false
percent_visible = false
_sections_unfolded = [ "Mouse", "Rect", "Theme", "custom_styles" ]

[node name="PopulationLabel" type="Label" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.0
margin_top = -63.0
margin_right = -12.0
margin_bottom = -49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "10"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="GrowthTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="ClickArea" type="Area2D" parent="." index="4"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea" index="0"]

shape = SubResource( 3 )

[connection signal="timeout" from="GrowthTimer" to="." method="_on_GrowthTimer_timeout"]

[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]


